Final notebooks for Ch12. Added code comments, documentation. And model training logic

--- a/Ch12/12.1_Spam_Classification_with_BERT.ipynb
+++ b/Ch12/12.1_Spam_Classification_with_BERT.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Spam Classification with BERT\n",
+    "\n",
+    "Deep learning has been revolutionized by transformer models. Transformer based models like BERT are heavily used in NLP to solve tasks due to the rich numerical representations of text they provide. Here we will be discussing how to download a transformer model and then adapt it to solve a spam classification problem.\n",
+    "\n",
+    "\n",
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch12/12.1_Spam_Classification_with_BERT.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import libraries"
    ]
   },
@@ -63,33 +79,6 @@
     "# Fixing the random seed\n",
     "random_seed=4321\n",
     "fix_random_seed(random_seed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setting Environment variables for TFHUB downloads"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: TFHUB_CACHE_DIR=${HOMEPATH}\\Documents\\code\\manning_tf2_in_action\\tf_hub\n"
-     ]
-    }
-   ],
-   "source": [
-    "%mkdir ${HOMEPATH}\\Documents\\code\\manning_tf2_in_action\\tf_hub\n",
-    "%env TFHUB_CACHE_DIR=${HOMEPATH}\\Documents\\code\\manning_tf2_in_action\\tf_hub\n",
-    "\n",
-    "# Run %env to see if the variable has been fixed"
    ]
   },
   {
