Updated chapter 12 to include running time. Added tf-addons library to requirements

--- a/Ch12/12.1_Spam_Classification_with_BERT.ipynb
+++ b/Ch12/12.1_Spam_Classification_with_BERT.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,7 @@
     "import official.nlp.optimization\n",
     "import official.nlp.bert.bert_models\n",
     "import official.nlp.bert.configs\n",
+    "import time \n",
     "\n",
     "print(\"TensorFlow: {} installed\".format(tf.__version__))\n",
     "\n",
@@ -92,18 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The zip file already exists.\n",
-      "The extracted data already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Downloading the data\n",
     "\n",
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,20 +282,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyse some of the removed samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Downloading the BERT model\n",
     "\n",
     "Here we download the BERT model from the TensorFlow hub. and create a Keras layer from that."
@@ -311,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -378,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary file is at: b'C:\\\\Users\\\\thush\\\\AppData\\\\Local\\\\Temp\\\\tfhub_modules\\\\ce53fe6769d2ac3a260e92555120c54e1aecbea6\\\\assets\\\\vocab.txt'\n",
+      "Vocabulary file is at: b'/tmp/tfhub_modules/ce53fe6769d2ac3a260e92555120c54e1aecbea6/assets/vocab.txt'\n",
       "Configuration do_lower_case of BERT: True\n"
      ]
     }
@@ -412,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,25 +473,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count    1094.000000\n",
-       "mean       33.248629\n",
-       "std        19.922181\n",
+       "mean       32.924132\n",
+       "std        19.560793\n",
        "min         9.000000\n",
        "25%        15.000000\n",
        "50%        22.000000\n",
-       "75%        53.000000\n",
-       "90%        60.000000\n",
-       "max        76.000000\n",
+       "75%        52.000000\n",
+       "90%        59.000000\n",
+       "max        74.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -645,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,34 +651,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Epoch 1/3\n",
-      "18/18 [==============================] - 544s 29s/step - loss: 0.7082 - accuracy: 0.4555 - val_loss: 0.6764 - val_accuracy: 0.5150\n",
+      "18/18 [==============================] - 20s 539ms/step - loss: 0.6571 - accuracy: 0.6527 - val_loss: 0.6170 - val_accuracy: 0.7900\n",
       "Epoch 2/3\n",
-      "18/18 [==============================] - 518s 29s/step - loss: 0.6645 - accuracy: 0.6589 - val_loss: 0.6480 - val_accuracy: 0.8150\n",
+      "18/18 [==============================] - 9s 475ms/step - loss: 0.5362 - accuracy: 0.9315 - val_loss: 0.5474 - val_accuracy: 0.8200\n",
       "Epoch 3/3\n",
-      "18/18 [==============================] - 518s 29s/step - loss: 0.6414 - accuracy: 0.7608 - val_loss: 0.6391 - val_accuracy: 0.8550\n"
+      "18/18 [==============================] - 9s 477ms/step - loss: 0.4776 - accuracy: 0.9701 - val_loss: 0.5324 - val_accuracy: 0.8150\n",
+      "It took 37.52998161315918 seconds to complete the training\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x216b64bd0b8>"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "metrics = [tf.keras.metrics.SparseCategoricalAccuracy('accuracy', dtype=tf.float32)]\n",
     "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
     "\n",
@@ -710,6 +680,8 @@
     "    loss=loss,\n",
     "    metrics=metrics)\n",
     "\n",
+    "t1 = time.time()\n",
+    "\n",
     "# Train the model\n",
     "hub_classifier.fit(\n",
     "      x=train_inputs, \n",
@@ -717,7 +689,11 @@
     "      validation_data=(valid_inputs, valid_y),\n",
     "      validation_batch_size=eval_batch_size,\n",
     "      batch_size=batch_size,\n",
-    "      epochs=epochs)\n"
+    "      epochs=epochs)\n",
+    "\n",
+    "t2 = time.time()\n",
+    "\n",
+    "print(\"It took {} seconds to complete the training\".format(t2-t1))"
    ]
   },
   {
@@ -729,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,23 +722,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7/7 [==============================] - 22s 3s/step - loss: 0.6432 - accuracy: 0.7950\n"
+      "7/7 [==============================] - 1s 77ms/step - loss: 0.5351 - accuracy: 0.8300\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.6432445049285889, 0.7950000166893005]"
+       "[0.5351237058639526, 0.8299999833106995]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
