--- a/Ch12/12.2_Question_answering_with_BERT.ipynb
+++ b/Ch12/12.2_Question_answering_with_BERT.ipynb
@@ -43,6 +43,7 @@
     "from transformers import DistilBertTokenizerFast\n",
     "from transformers import DistilBertConfig, TFDistilBertForQuestionAnswering\n",
     "import tensorflow as tf\n",
+    "import time\n",
     "\n",
     "def fix_random_seed(seed):\n",
     "    \"\"\" Setting the random seed of various libraries \"\"\"\n",
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        " {'answer_start': [92], 'text': ['a golden statue of the Virgin Mary']}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +387,6 @@
      "output_type": "stream",
      "text": [
       "Creating train data\n",
-      "\tShuffling data\n",
       "\tDone\n",
       "Creating test data\n",
       "\tDone\n"
@@ -454,17 +454,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some layers from the model checkpoint at distilbert-base-uncased were not used when initializing TFDistilBertForQuestionAnswering: ['vocab_transform', 'activation_13', 'vocab_projector', 'vocab_layer_norm']\n",
+      "Some layers from the model checkpoint at distilbert-base-uncased were not used when initializing TFDistilBertForQuestionAnswering: ['vocab_layer_norm', 'vocab_transform', 'vocab_projector', 'activation_13']\n",
       "- This IS expected if you are initializing TFDistilBertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFDistilBertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some layers of TFDistilBertForQuestionAnswering were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['dropout_19', 'qa_outputs']\n",
+      "Some layers of TFDistilBertForQuestionAnswering were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['qa_outputs', 'dropout_19']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -472,13 +472,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f6aa136e2b8>> and will run it as-is.\n",
+      "WARNING:tensorflow:The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).WARNING:tensorflow:AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f3a636d52b8>> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: <cyfunction Socket.send at 0x7f6a9f987110> is not a module, class, method, function, traceback, frame, or code object\n",
+      "Cause: <cyfunction Socket.send at 0x7f3a61cef110> is not a module, class, method, function, traceback, frame, or code object\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f6aa136e2b8>> and will run it as-is.\n",
+      "WARNING: AutoGraph could not transform <bound method Socket.send of <zmq.sugar.socket.Socket object at 0x7f3a636d52b8>> and will run it as-is.\n",
       "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: <cyfunction Socket.send at 0x7f6a9f987110> is not a module, class, method, function, traceback, frame, or code object\n",
+      "Cause: <cyfunction Socket.send at 0x7f3a61cef110> is not a module, class, method, function, traceback, frame, or code object\n",
       "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
       "\n",
       "WARNING:tensorflow:The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n"
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -549,32 +549,31 @@
       "WARNING:tensorflow:The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
       "WARNING:tensorflow:The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
       "WARNING:tensorflow:The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
-      "   9700/Unknown - 3146s 323ms/step - loss: 4.3139 - tf_distil_bert_for_question_answering_loss: 2.2146 - tf_distil_bert_for_question_answering_1_loss: 2.0992 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.4180 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.4487WARNING:tensorflow:The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
+      "   9700/Unknown - 3143s 323ms/step - loss: 4.3138 - tf_distil_bert_for_question_answering_loss: 2.2146 - tf_distil_bert_for_question_answering_1_loss: 2.0992 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.4180 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.4487WARNING:tensorflow:The parameters `output_attentions`, `output_hidden_states` and `use_cache` cannot be updated when calling a model.They have to be set to True/False in the config object (i.e.: `config=XConfig.from_pretrained('name', output_attentions=True)`).\n",
       "WARNING:tensorflow:The parameter `return_dict` cannot be set in graph mode and will always be set to `True`.\n",
-      "9700/9700 [==============================] - 3308s 340ms/step - loss: 4.3138 - tf_distil_bert_for_question_answering_loss: 2.2146 - tf_distil_bert_for_question_answering_1_loss: 2.0992 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.4180 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.4487 - val_loss: 2.3849 - val_tf_distil_bert_for_question_answering_loss: 1.2053 - val_tf_distil_bert_for_question_answering_1_loss: 1.1796 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6681 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.6909\n",
+      "9700/9700 [==============================] - 3306s 340ms/step - loss: 4.3138 - tf_distil_bert_for_question_answering_loss: 2.2146 - tf_distil_bert_for_question_answering_1_loss: 2.0992 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.4180 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.4487 - val_loss: 2.3832 - val_tf_distil_bert_for_question_answering_loss: 1.2050 - val_tf_distil_bert_for_question_answering_1_loss: 1.1781 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6683 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.6910\n",
       "Epoch 2/3\n",
-      "9700/9700 [==============================] - 3301s 340ms/step - loss: 2.1028 - tf_distil_bert_for_question_answering_loss: 1.1041 - tf_distil_bert_for_question_answering_1_loss: 0.9987 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6661 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7079 - val_loss: 2.3345 - val_tf_distil_bert_for_question_answering_loss: 1.1704 - val_tf_distil_bert_for_question_answering_1_loss: 1.1640 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6931 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7132\n",
+      "9700/9700 [==============================] - 3318s 342ms/step - loss: 2.1027 - tf_distil_bert_for_question_answering_loss: 1.1042 - tf_distil_bert_for_question_answering_1_loss: 0.9984 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6657 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7079 - val_loss: 2.3366 - val_tf_distil_bert_for_question_answering_loss: 1.1722 - val_tf_distil_bert_for_question_answering_1_loss: 1.1644 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6929 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7124\n",
       "Epoch 3/3\n",
-      "9700/9700 [==============================] - 3293s 339ms/step - loss: 1.6349 - tf_distil_bert_for_question_answering_loss: 0.8647 - tf_distil_bert_for_question_answering_1_loss: 0.7703 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.7294 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7672 - val_loss: 2.4049 - val_tf_distil_bert_for_question_answering_loss: 1.2048 - val_tf_distil_bert_for_question_answering_1_loss: 1.2001 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6975 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7200\n"
+      "9700/9700 [==============================] - 3320s 342ms/step - loss: 1.6351 - tf_distil_bert_for_question_answering_loss: 0.8648 - tf_distil_bert_for_question_answering_1_loss: 0.7703 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.7300 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7670 - val_loss: 2.4073 - val_tf_distil_bert_for_question_answering_loss: 1.2062 - val_tf_distil_bert_for_question_answering_1_loss: 1.2010 - val_tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6988 - val_tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.7191\n",
+      "It took 9944.095540046692 seconds to complete the training\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f699e053a58>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
+    "t1 = time.time()\n",
+    "\n",
     "model_v2.fit(\n",
     "    train_dataset, \n",
     "    validation_data=valid_dataset,    \n",
     "    epochs=3\n",
-    ")"
+    ")\n",
+    "\n",
+    "t2 = time.time()\n",
+    "\n",
+    "print(\"It took {} seconds to complete the training\".format(t2-t1))"
    ]
   },
   {
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +636,7 @@
        " 'tokenizers/distilbert_qa/added_tokens.json')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,27 +667,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1322/1322 [==============================] - 166s 126ms/step - loss: 2.4756 - tf_distil_bert_for_question_answering_loss: 1.2702 - tf_distil_bert_for_question_answering_1_loss: 1.2054 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6577 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.6942\n"
+      "1322/1322 [==============================] - 166s 126ms/step - loss: 2.4768 - tf_distil_bert_for_question_answering_loss: 1.2703 - tf_distil_bert_for_question_answering_1_loss: 1.2065 - tf_distil_bert_for_question_answering_sparse_categorical_accuracy: 0.6570 - tf_distil_bert_for_question_answering_1_sparse_categorical_accuracy: 0.6936\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2.475609064102173,\n",
-       " 1.2702200412750244,\n",
-       " 1.205389380455017,\n",
-       " 0.6577104926109314,\n",
-       " 0.6942289471626282]"
+       "[2.4768142700195312,\n",
+       " 1.2703046798706055,\n",
+       " 1.2065105438232422,\n",
+       " 0.657048225402832,\n",
+       " 0.6935666799545288]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -736,14 +735,19 @@
     "\n",
     "i = 5\n",
     "\n",
+    "# Define sample question\n",
     "sample_q = test_questions[i]\n",
+    "# Define sample context\n",
     "sample_c = test_contexts[i]\n",
+    "# Define sample answer \n",
     "sample_a = test_answers[i]\n",
+    "\n",
+    "# Get the input in the format BERT accepts\n",
     "sample_input = (test_encodings[\"input_ids\"][i:i+1], test_encodings[\"attention_mask\"][i:i+1])\n",
     "\n",
-    "def ask_bert(sample_input, tokenizer):\n",
-    "    \n",
-    "    out = model_v2.predict(sample_input)\n",
+    "def ask_bert(sample_input, tokenizer, model):\n",
+    "    \"\"\" This function takes an input, a tokenizer, a model and returns the prediciton \"\"\"\n",
+    "    out = model.predict(sample_input)\n",
     "    pred_ans_start = tf.argmax(out[0][0])\n",
     "    pred_ans_end = tf.argmax(out[1][0])\n",
     "    print(\"{}-{} token ids contain the answer\".format(pred_ans_start, pred_ans_end))\n",
@@ -759,7 +763,7 @@
     "print(\"\\t\", sample_a, \"\\n\")\n",
     "print('='*50,'\\n')\n",
     "\n",
-    "sample_pred_ans = ask_bert(sample_input, tokenizer)\n",
+    "sample_pred_ans = ask_bert(sample_input, tokenizer, model_v2)\n",
     "\n",
     "print(\"Answer (predicted)\")\n",
     "print(sample_pred_ans)\n",
@@ -770,7 +774,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Debugging the model for NaN losses"
+    "### Debugging the model for NaN losses\n",
+    "\n",
+    "This is a few things you can do to debug your model if you get nan losses. Here I demonstrate some checks you can do on the model to find out errors"
    ]
   },
   {
@@ -840,41 +846,47 @@
     "\n",
     "for i,(x,y) in enumerate(train_dataset):\n",
     "    print(i, end='\\r')\n",
+    "    print(\"Found error in the batch {}\".format(i))\n",
+    "    \n",
+    "    # Get the model output\n",
     "    out = model(x)\n",
     "    \n",
+    "    # Check any index in the labels is greater than the max length\n",
     "    if tf.reduce_sum(tf.cast(y[0]>511, 'int32'))>0:\n",
     "        print('start label out of range >')\n",
     "        print(out.start_logits)\n",
     "        print(x)\n",
     "        print(y[0])\n",
     "        break\n",
+    "    # Check if any index in the labels is smaller than zero\n",
     "    if tf.reduce_sum(tf.cast(y[0]<0, 'int32'))>0:\n",
     "        print('start label out of range <')\n",
     "        print(out.start_logits)\n",
     "        print(x)\n",
     "        print(y[0])\n",
     "        break\n",
-    "    \n",
+    "    # Check any index in the labels is greater than the max length\n",
     "    if tf.reduce_sum(tf.cast(y[1]>511, 'int32'))>0:\n",
     "        print('end label out of range >')\n",
     "        print(out.start_logits)\n",
     "        print(x)\n",
     "        print(y[1])\n",
     "        break\n",
+    "    # Check if any index in the labels is smaller than zero\n",
     "    if tf.reduce_sum(tf.cast(y[1]<0, 'int32'))>0:\n",
     "        print('end label out of range <')\n",
     "        print(out.start_logits)\n",
     "        print(x)\n",
     "        print(y[1])\n",
     "        break\n",
-    "        \n",
+    "    # Check if any loss is nan    \n",
     "    if tf.math.is_nan(tf.reduce_sum(out.start_logits)):\n",
     "        print('start_logits were nan')\n",
     "        print(out.start_logits)\n",
     "        print(x)\n",
     "        print(y)\n",
     "        break\n",
-    "        \n",
+    "    # Check if any loss is nan\n",
     "    if tf.math.is_nan(tf.reduce_sum(out.end_logits)):\n",
     "        print('end_logits were nan')\n",
     "        print(out.end_logits)\n",
