Fixed minor issues with ch06/07/08/10

--- a/Ch10/Language_modelling.ipynb
+++ b/Ch10/Language_modelling.ipynb
@@ -464,9 +464,9 @@
     }
    ],
    "source": [
-    "for s, ngrams, seq in zip(test_stories[:5], test_ngram_stories[:5], test_data_seq[:5]):\n",
+    "for s, tokens, seq in zip(test_stories[:5], test_ngram_stories[:5], test_data_seq[:5]):\n",
     "    print(\"Original: {}\".format(s[:50]))\n",
-    "    print(\"n-grams: {}\".format(ngrams[:25]))\n",
+    "    print(\"n-grams: {}\".format(tokens[:25]))\n",
     "    print(\"Word ID sequence: {}\".format(seq[:25]))\n",
     "    print(\"\\n\")"
    ]
