Fixed chapter 10 feedback code changes

--- a/Ch10/Language_modelling.ipynb
+++ b/Ch10/Language_modelling.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.1\n"
+      "2.4.1\n"
      ]
     }
    ],
@@ -102,18 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tar file already exists.\n",
-      "The extracted data already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Downloading the data\n",
     "# http://www.thespermwhale.com/jaseweston/babi/CBTest.tgz\n",
@@ -131,7 +122,7 @@
     "    r = requests.get(url)\n",
     "\n",
     "    if not os.path.exists(os.path.join('data','lm')):\n",
-    "        os.mkdir(os.path.join('data','lm'))\n",
+    "        os.makedirs(os.path.join('data','lm'))\n",
     "    \n",
     "    # Write to a file\n",
     "    with open(os.path.join('data', 'lm', 'CBTest.tgz'), 'wb') as f:\n",
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,19 +158,16 @@
     "    stories = []\n",
     "\n",
     "    with open(path, 'r') as f:    \n",
-    "        s = []\n",
-    "        start_capture = False    \n",
+    "        s = [] \n",
     "        for row in f:\n",
-    "\n",
-    "            if start_capture:\n",
-    "                s.append(row)\n",
-    "\n",
+    "            \n",
     "            if row.startswith(\"_BOOK_TITLE_\"):\n",
     "                if len(s)>0:\n",
     "                    stories.append(' '.join(s).lower())            \n",
-    "                s = []\n",
-    "                start_capture=True            \n",
+    "                s = []           \n",
     "\n",
+    "            s.append(row)\n",
+    "            \n",
     "    if len(s)>0:\n",
     "        stories.append(' '.join(s).lower())  \n",
     "    \n",
@@ -192,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,10 +190,11 @@
       "Collected 98 stories (train)\n",
       "Collected 5 stories (valid)\n",
       "Collected 5 stories (test)\n",
-      "chapter i. -lcb- chapter heading picture : p1.jpg -rcb- how the fairies were not invited to court .\n",
+      "_book_title_ : andrew_lang___prince_prigio.txt.out\n",
+      " chapter i. -lcb- chapter heading picture : p1.jp\n",
       "\n",
-      "\n",
-      " a tale of the tontlawald long , long ago there stood in the midst of a country covered with lakes a \n"
+      " _book_title_ : andrew_lang___the_violet_fairy_book.txt.out\n",
+      " a tale of the tontlawald long , long ago\n"
      ]
     }
    ],
@@ -218,6 +207,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99464\n",
+      "99834\n",
+      "136758\n",
+      "761257\n",
+      "524783\n",
+      "522998\n",
+      "528840\n",
+      "531058\n",
+      "527601\n",
+      "674648\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(len(stories[i]))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +684,7 @@
     "class PerplexityMetric(tf.keras.metrics.Mean):\n",
     "    \n",
     "    def __init__(self, name='perplexity', **kwargs):\n",
-    "      super(PerplexityMetric, self).__init__(name=name, **kwargs)\n",
+    "      super().__init__(name=name, **kwargs)\n",
     "      self.cross_entropy = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False, reduction='none')\n",
     "\n",
     "    def _calculate_perplexity(self, real, pred):\n",
@@ -686,7 +702,7 @@
     "    def update_state(self, y_true, y_pred, sample_weight=None):            \n",
     "      perplexity = self._calculate_perplexity(y_true, y_pred)\n",
     "      # Remember self.perplexity is a tensor (tf.Variable), so using simply \"self.perplexity = perplexity\" will result in error because of mixing EagerTensor and Graph operations \n",
-    "      super(PerplexityMetric, self).update_state(perplexity)"
+    "      super().update_state(perplexity)"
    ]
   },
   {
