Fixed regex for expanding not

--- a/Ch09/Sentiment_analysis.ipynb
+++ b/Ch09/Sentiment_analysis.ipynb
@@ -508,7 +508,7 @@
     "    # Turn to lower case\n",
     "    doc = doc.lower()\n",
     "    # the shortened form n't is expanded to not\n",
-    "    doc = doc.replace(\"n\\'t \", ' not ')\n",
+    "    doc = re.sub(pattern=r\"\\w+n\\'t \", repl=\"not \", string=doc)\n",
     "    # shortened forms like 'll 're 'd 've are removed as they don't add much value to this task\n",
     "    doc = re.sub(r\"(?:\\'ll |\\'re |\\'d |\\'ve )\", \" \", doc)\n",
     "    # numbers are removed\n",
